--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@
 ---
 sudo: false
 rvm:
-- 2.1.5
-- 2.3.0
+- 2.3.1
 gemfile:
 - gemfiles/activerecord-4.2/Gemfile.mysql2
 - gemfiles/activerecord-4.2/Gemfile.postgresql
@@ -14,20 +13,15 @@ gemfile:
 - gemfiles/activerecord-5.0/Gemfile.mysql2
 - gemfiles/activerecord-5.0/Gemfile.postgresql
 - gemfiles/activerecord-5.0/Gemfile.sqlite3
+- gemfiles/activerecord-5.1/Gemfile.mysql2
+- gemfiles/activerecord-5.1/Gemfile.postgresql
+- gemfiles/activerecord-5.1/Gemfile.sqlite3
+- gemfiles/activerecord-5.2/Gemfile.mysql2
+- gemfiles/activerecord-5.2/Gemfile.postgresql
+- gemfiles/activerecord-5.2/Gemfile.sqlite3
 env: POSTGRESQL_DB_USER=postgres MYSQL_DB_USER=travis
 addons:
   postgresql: '9.4'
 before_script: bundle exec rake create_databases
 after_script: bundle exec rake drop_databases
 script: bundle exec rake travis
-matrix:
-  exclude:
-  - rvm: 2.1.5
-    gemfile: gemfiles/activerecord-5.0/Gemfile.mysql2
-    env: POSTGRESQL_DB_USER=postgres MYSQL_DB_USER=travis
-  - rvm: 2.1.5
-    gemfile: gemfiles/activerecord-5.0/Gemfile.postgresql
-    env: POSTGRESQL_DB_USER=postgres MYSQL_DB_USER=travis
-  - rvm: 2.1.5
-    gemfile: gemfiles/activerecord-5.0/Gemfile.sqlite3
-    env: POSTGRESQL_DB_USER=postgres MYSQL_DB_USER=travis
